Enable AWS Managed rules support in conformance pack
- Uncommented managed_template.yml with full CloudFormation structure
- Enabled managed_rules_list variable in conformance_pack module
- Uncommented managed_blocks generation logic in cpack_template.tf
- Added managed_blocks to combined cpack_blocks output
- Added 2 sample AWS managed rules to dev environment:
  * S3_BUCKET_VERSIONING_ENABLED - checks S3 versioning
  * RDS_STORAGE_ENCRYPTED - checks RDS encryption
- Conformance pack now supports Guard + Lambda + Managed rules

--- a/custom-config-rules/modules/conformance_pack/templates/managed_template.yml
+++ b/custom-config-rules/modules/conformance_pack/templates/managed_template.yml
@@ -1,17 +1,12 @@
-# AWS Managed Config Rule Template
-# This template is a placeholder for future AWS Managed rule support
-# Currently not in use - Guard policy rules provide equivalent functionality
-
-# Template structure for reference:
-# ${block_name}:
-#   Type: AWS::Config::ConfigRule
-#   Properties:
-#     ConfigRuleName: ${config_rule_name}
-#     Description: ${description}
-#     Source:
-#       Owner: AWS
-#       SourceIdentifier: ${source_identifier}
-#     Scope:
-#       ComplianceResourceTypes:
-# ${resource_types_scope}
-#     ${input_parameters}
+${block_name}:
+  Type: AWS::Config::ConfigRule
+  Properties:
+    ConfigRuleName: ${config_rule_name}
+    Description: ${description}
+    Source:
+      Owner: AWS
+      SourceIdentifier: ${source_identifier}
+    Scope:
+      ComplianceResourceTypes:
+${resource_types_scope}
+    ${input_parameters}
